[project]
name = "netsci-course"
version = "0.1.0"
description = "Network Science Course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.5.49",
    "networkx>=3.4.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "vega-datasets>=0.9.0",
]
